@@ -25,6 +25,11 @@ endif
 
 DH_OPTIONS = --with autotools_dev --builddirectory=debian/build --parallel
 
+ifneq (,$(filter parallel=%,$(DEB_BUILD_OPTIONS)))
+  NUMJOBS = $(patsubst parallel=%,%,$(filter parallel=%,$(DEB_BUILD_OPTIONS)))
+  MAKEFLAGS += -j$(NUMJOBS)
+endif
+
 DH_INSTALL_FILES = $(basename $(wildcard debian/*.install.in))
 
 # Use debhelper's dh
